--- a/client/elk/templates/metricbeat.service.j2
+++ b/client/elk/templates/metricbeat.service.j2
@@ -3,7 +3,7 @@ Description=Metricbeat Service
 After=network.target
 
 [Service]
-ExecStart=/opt/metricbeat-8.17.2-linux-x86_64/metricbeat -e -c /opt/metricbeat-8.17.2-linux-x86_64/metricbeat.yml
+ExecStart=/opt/{{ item.1 }}/metricbeat -e -c /opt/{{ item.1 }}/metricbeat.yml
 Restart=always
 User=root
 Group=root
