--- a/client/elk/templates/packetbeat.service.j2
+++ b/client/elk/templates/packetbeat.service.j2
@@ -3,7 +3,7 @@ Description=Packetbeat Service
 After=network.target
 
 [Service]
-ExecStart=/opt/packetbeat-8.17.2-linux-x86_64/packetbeat -e -c /opt/packetbeat-8.17.2-linux-x86_64/packetbeat.yml
+ExecStart=/opt/{{ item.1 }}/packetbeat -e -c /opt/{{ item.1 }}/packetbeat.yml
 Restart=always
 User=root
 Group=root
